fixed mobile view text alignment and icon positions

--- a/css/features-styles.css
+++ b/css/features-styles.css
@@ -104,7 +104,7 @@ html, body {
 }
 .features-sign img {
   margin-left: -3px;
-  margin-top: -3px;
+  margin-top: -15px;
 }
 .features-text {
   color: var(--primary-yellow-color);
@@ -113,7 +113,6 @@ html, body {
 @media (max-width: 576px) {
   .container-features {
     min-width: 100%;
-    text-align: center;
   }
   .features-card {
     flex-direction: column;
@@ -121,7 +120,8 @@ html, body {
     margin: auto;
   }
   .features-card-text {
-    margin: auto;
+    margin: .5rem auto;
+    text-align: center;
   }
 }
 @media (max-width: 768px) {
